@@ -1,0 +1,70 @@
+LATTICE_LIBRARY = "../lattices.xml"
+LATTICE = "triangle"
+MODEL_LIBRARY = "../models.xml"
+MODEL = "spin"
+SWEEPS = 65536
+THERMALIZATION = 1024
+
+Jxy  = 1; Jz = 1
+REPRESENTATION = "path integral"
+{ T = 0.1 } { T = 0.2 } { T = 0.3 }
+{ T = 0.4 } { T = 0.5 } { T = 0.6 }
+{ T = 0.7 } { T = 0.8 } { T = 0.9 }
+{ T = 1.0 } { T = 1.1 } { T = 1.2 }
+{ T = 1.3 } { T = 1.4 } { T = 1.5 }
+{ T = 2.0 } { T = 3.0 } { T = 4.0 }
+REPRESENTATION = "SSE"
+{ T = 0.1 } { T = 0.2 } { T = 0.3 }
+{ T = 0.4 } { T = 0.5 } { T = 0.6 }
+{ T = 0.7 } { T = 0.8 } { T = 0.9 }
+{ T = 1.0 } { T = 1.1 } { T = 1.2 }
+{ T = 1.3 } { T = 1.4 } { T = 1.5 }
+{ T = 2.0 } { T = 3.0 } { T = 4.0 }
+
+Jxy  = 1; Jz = -1
+REPRESENTATION = "path integral"
+{ T = 0.1 } { T = 0.2 } { T = 0.3 }
+{ T = 0.4 } { T = 0.5 } { T = 0.6 }
+{ T = 0.7 } { T = 0.8 } { T = 0.9 }
+{ T = 1.0 } { T = 1.1 } { T = 1.2 }
+{ T = 1.3 } { T = 1.4 } { T = 1.5 }
+{ T = 2.0 } { T = 3.0 } { T = 4.0 }
+REPRESENTATION = "SSE"
+{ T = 0.1 } { T = 0.2 } { T = 0.3 }
+{ T = 0.4 } { T = 0.5 } { T = 0.6 }
+{ T = 0.7 } { T = 0.8 } { T = 0.9 }
+{ T = 1.0 } { T = 1.1 } { T = 1.2 }
+{ T = 1.3 } { T = 1.4 } { T = 1.5 }
+{ T = 2.0 } { T = 3.0 } { T = 4.0 }
+
+Jxy  = -1; Jz = 1
+REPRESENTATION = "path integral"
+{ T = 0.1 } { T = 0.2 } { T = 0.3 }
+{ T = 0.4 } { T = 0.5 } { T = 0.6 }
+{ T = 0.7 } { T = 0.8 } { T = 0.9 }
+{ T = 1.0 } { T = 1.1 } { T = 1.2 }
+{ T = 1.3 } { T = 1.4 } { T = 1.5 }
+{ T = 2.0 } { T = 3.0 } { T = 4.0 }
+REPRESENTATION = "SSE"
+{ T = 0.1 } { T = 0.2 } { T = 0.3 }
+{ T = 0.4 } { T = 0.5 } { T = 0.6 }
+{ T = 0.7 } { T = 0.8 } { T = 0.9 }
+{ T = 1.0 } { T = 1.1 } { T = 1.2 }
+{ T = 1.3 } { T = 1.4 } { T = 1.5 }
+{ T = 2.0 } { T = 3.0 } { T = 4.0 }
+
+Jxy  = -1; Jz = -1
+REPRESENTATION = "path integral"
+{ T = 0.1 } { T = 0.2 } { T = 0.3 }
+{ T = 0.4 } { T = 0.5 } { T = 0.6 }
+{ T = 0.7 } { T = 0.8 } { T = 0.9 }
+{ T = 1.0 } { T = 1.1 } { T = 1.2 }
+{ T = 1.3 } { T = 1.4 } { T = 1.5 }
+{ T = 2.0 } { T = 3.0 } { T = 4.0 }
+REPRESENTATION = "SSE"
+{ T = 0.1 } { T = 0.2 } { T = 0.3 }
+{ T = 0.4 } { T = 0.5 } { T = 0.6 }
+{ T = 0.7 } { T = 0.8 } { T = 0.9 }
+{ T = 1.0 } { T = 1.1 } { T = 1.2 }
+{ T = 1.3 } { T = 1.4 } { T = 1.5 }
+{ T = 2.0 } { T = 3.0 } { T = 4.0 }
