@@ -223,4 +223,10 @@
   <EDGE type="1" source="4" target="5"/>
 </GRAPH>
 
+<GRAPH name="triangle" vertices="3">
+  <EDGE type="0" source="1" target="2"/>
+  <EDGE type="1" source="2" target="3"/>
+  <EDGE type="2" source="3" target="1"/>
+</GRAPH>
+
 </LATTICES>
