@@ -1,3 +1,7 @@
+2004-09-14  Synge Todo <wistaria@comp-phys.org>
+
+	* Fixed for non-bipartite lattices.
+	
 2004-09-13  Synge Todo <wistaria@comp-phys.org>
 
         * version 3.1b1
